[gd_scene load_steps=16 format=3 uid="uid://csnhkxij4kwv7"]

[ext_resource type="PackedScene" uid="uid://bwmc7c4kgjyxu" path="res://Scenes/tile_map.tscn" id="1_cok05"]
[ext_resource type="Script" path="res://Scripts/level.gd" id="1_eopox"]
[ext_resource type="PackedScene" uid="uid://bp5p80rncbtit" path="res://Scenes/UI/back_ground.tscn" id="2_lvkfk"]
[ext_resource type="PackedScene" uid="uid://fgaojvskrpel" path="res://Scenes/Levels/level_02.tscn" id="2_vjvsw"]
[ext_resource type="PackedScene" uid="uid://cn1gf4dy13k48" path="res://Scenes/Obstacles/spike.tscn" id="3_dk0m5"]
[ext_resource type="Resource" uid="uid://bngldww2eg000" path="res://score_resource.tres" id="3_dlcqf"]
[ext_resource type="PackedScene" uid="uid://dkes3f5xnc4le" path="res://Scenes/Fruits/apple.tscn" id="3_yro1c"]
[ext_resource type="PackedScene" uid="uid://cx84ajhc3tgcs" path="res://Scenes/Obstacles/jump_pad.tscn" id="8_hhq4i"]
[ext_resource type="PackedScene" uid="uid://bqf0b3oakmvi4" path="res://Scenes/player.tscn" id="9_fvp2p"]
[ext_resource type="PackedScene" uid="uid://b00456xk0q6g7" path="res://Scenes/end_point.tscn" id="10_g6ih4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88da1"]
size = Vector2(20, 219)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8l2wm"]
size = Vector2(18, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qv0ls"]
size = Vector2(56, 80.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3y8sa"]
size = Vector2(56, 79.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yv6c"]
size = Vector2(29, 78.5)

[node name="Level 1" type="Node2D"]
script = ExtResource("1_eopox")
next_level = ExtResource("2_vjvsw")
score_res = ExtResource("3_dlcqf")

[node name="BackGround" parent="." instance=ExtResource("2_lvkfk")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="EndPoint" parent="." instance=ExtResource("10_g6ih4")]
position = Vector2(41, 192)

[node name="Traps" type="Node2D" parent="."]
z_index = -100

[node name="Spike" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(185, 224)

[node name="Spike11" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(144, 168)
rotation = 1.5708

[node name="Spike12" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(207, 136)
rotation = 1.5708

[node name="Spike2" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(201, 224)

[node name="Spike3" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(217, 224)

[node name="Spike5" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(424, 64)
rotation = 3.14159

[node name="Spike10" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(408, 64)
rotation = 3.14159

[node name="Spike6" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(440, 64)
rotation = 3.14159

[node name="Spike7" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(456, 64)
rotation = 3.14159

[node name="Spike8" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(472, 64)
rotation = 3.14159

[node name="Spike9" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(488, 64)
rotation = 3.14159

[node name="Spike4" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(233, 224)

[node name="Spike13" parent="Traps" instance=ExtResource("3_dk0m5")]
position = Vector2(249, 224)

[node name="Jump Pad" parent="Traps" instance=ExtResource("8_hhq4i")]
position = Vector2(273, 208)

[node name="Items" type="Node2D" parent="."]
z_index = -10

[node name="Apple" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(296, 120)

[node name="Apple4" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(122, 144)

[node name="Apple13" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(185, 112)

[node name="Apple2" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(320, 120)

[node name="Apple3" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(344, 120)

[node name="Apple14" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(344, 80)

[node name="Apple15" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(320, 80)

[node name="Apple16" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(296, 80)

[node name="Apple5" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(408, 256)

[node name="Apple9" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(408, 224)

[node name="Apple10" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(408, 192)

[node name="Apple7" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(472, 256)

[node name="Apple8" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(472, 224)

[node name="Apple11" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(472, 192)

[node name="Apple12" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(472, 160)

[node name="Apple19" parent="Items" instance=ExtResource("3_yro1c")]
position = Vector2(472, 128)

[node name="TileMap" parent="." instance=ExtResource("1_cok05")]
layer_0/name = "Background"
layer_0/z_index = -1000
layer_0/tile_data = PackedInt32Array(917512, 65536, 1, 983048, 65536, 1, 1048584, 65536, 1, 917513, 65536, 1, 983049, 65536, 1, 1048585, 65536, 1, 917514, 65536, 1, 983050, 65536, 1, 1048586, 65536, 1, 917515, 65536, 1, 983051, 65536, 1, 1048587, 65536, 1, 917516, 65536, 1, 983052, 65536, 1, 1048588, 65536, 1, 917517, 65536, 1, 983053, 65536, 1, 1048589, 65536, 1, 917518, 65536, 1, 983054, 65536, 1, 1048590, 65536, 1, 917519, 65536, 1, 983055, 65536, 1, 1048591, 65536, 1, 983056, 65536, 1, 1048592, 65536, 1, 983057, 65536, 1, 1048593, 65536, 1, 983058, 65536, 1, 1048594, 65536, 1, 983059, 65536, 1, 1048595, 65536, 1, 983060, 65536, 1, 1048596, 65536, 1, 983061, 65536, 1, 1048597, 65536, 1, 983062, 65536, 1, 1048598, 65536, 1, 65561, 65536, 1, 131097, 65536, 1, 196633, 65536, 1, 65562, 65536, 1, 131098, 65536, 1, 196634, 65536, 1, 65563, 65536, 1, 131099, 65536, 1, 196635, 65536, 1, 65564, 65536, 1, 131100, 65536, 1, 196636, 65536, 1, 65565, 65536, 1, 131101, 65536, 1, 196637, 65536, 1, 65566, 65536, 1, 131102, 65536, 1, 196638, 65536, 1, 26, 65536, 1, 27, 65536, 1, 28, 65536, 1, 29, 65536, 1, 30, 65536, 1, 31, 65536, 1, 65567, 65536, 1, 131103, 65536, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(1114113, 65536, 4, 1114114, 65536, 4, 1114115, 65536, 4, 1114116, 65536, 4, 1114117, 65536, 4, 1114118, 65536, 4, 1114119, 65536, 4, 1114120, 262144, 5, 1048584, 0, 5, 983048, 0, 5, 917512, 0, 4, 917513, 65536, 4, 917514, 65536, 4, 917515, 65536, 0, 917516, 65536, 0, 917517, 65536, 0, 917518, 65536, 0, 983049, 65536, 1, 1048585, 65536, 1, 1048586, 65536, 1, 1114122, 65536, 1, 1114123, 65536, 1, 1114124, 65536, 1, 1114125, 65536, 1, 1048589, 65536, 1, 1048590, 65536, 1, 983054, 65536, 1, 983053, 65536, 1, 983052, 65536, 1, 983051, 65536, 1, 983050, 65536, 1, 1114121, 65536, 1, 1048588, 65536, 1, 1048587, 65536, 1, 1114126, 65536, 1, 1, 65536, 6, 2, 65536, 6, 3, 65536, 6, 4, 65536, 6, 5, 65536, 6, 6, 65536, 6, 7, 65536, 6, 8, 65536, 6, 9, 65536, 6, 10, 65536, 6, 11, 65536, 6, 12, 65536, 6, 13, 65536, 6, 14, 65536, 6, 15, 65536, 6, 16, 65536, 6, 17, 65536, 6, 18, 65536, 6, 19, 65536, 6, 20, 65536, 6, 21, 65536, 6, 22, 65536, 6, 23, 65536, 6, 24, 65536, 6, 25, 262144, 4, 65561, 0, 5, 131097, 0, 5, 196633, 0, 2, 196634, 65536, 2, 196635, 65536, 2, 196637, 65536, 2, 196636, 65536, 2, 196638, 65536, 2, 196639, 262144, 4, 983061, 131072, 0, 983060, 65536, 0, 983059, 65536, 0, 983058, 65536, 0, 983057, 65536, 0, 983056, 65536, 0, 917519, 131072, 0, 983055, 196608, 1, 1048591, 65536, 1, 1114127, 65536, 1, 1048592, 65536, 1, 1114128, 65536, 1, 1048593, 65536, 1, 1114129, 65536, 1, 1048594, 65536, 1, 1114130, 65536, 1, 1048595, 65536, 1, 1114131, 65536, 1, 1048596, 65536, 1, 1114132, 65536, 1, 1048597, 131072, 1, 1114133, 196608, 1, 1114134, 65536, 0, 1114135, 65536, 0, 0, 196608, 4, 65536, 131072, 5, 131072, 131072, 5, 196608, 131072, 5, 262144, 131072, 5, 327680, 131072, 5, 393216, 131072, 5, 458752, 131072, 5, 524288, 131072, 5, 589824, 131072, 5, 655360, 131072, 5, 720896, 131072, 5, 786432, 131072, 5, 851968, 131072, 5, 917504, 131072, 5, 983040, 131072, 5, 1048576, 131072, 5, 1114112, 196608, 5, 1114136, 65536, 0, 1114137, 65536, 0, 1114138, 65536, 0, 1114139, 65536, 0, 1114140, 65536, 0, 1114141, 65536, 0, 1114142, 65536, 0, 1114143, 262144, 5, 1048607, 0, 5, 983071, 0, 5, 917535, 0, 5, 851999, 0, 5, 786463, 0, 5, 720927, 0, 5, 655391, 0, 5, 589855, 0, 5, 524319, 0, 5, 458783, 0, 5, 393247, 0, 5, 327711, 0, 5, 262175, 0, 5, 1048577, 393216, 2, 1048578, 458752, 2, 983042, 458752, 1, 983043, 458752, 1, 917507, 589824, 1, 917508, 458752, 0, 983041, 393216, 1, 917505, 393216, 1, 917506, 458752, 1, 1048579, 458752, 2, 983044, 458752, 1, 1048580, 458752, 2, 1048581, 458752, 2, 1048582, 458752, 2, 983045, 458752, 1, 917509, 458752, 0, 917510, 458752, 0, 983046, 458752, 1, 851971, 524288, 1, 851970, 458752, 1, 851969, 393216, 1, 786433, 393216, 0, 786434, 458752, 0, 786435, 524288, 0, 983047, 524288, 1, 1048583, 524288, 2, 917511, 524288, 0, 917520, 393216, 2, 851984, 393216, 0, 917521, 458752, 2, 851985, 458752, 0, 917525, 458752, 2, 851989, 458752, 1, 786453, 589824, 1, 720917, 524288, 1, 655381, 524288, 0, 917524, 458752, 2, 851988, 458752, 1, 786452, 458752, 1, 720916, 458752, 1, 655380, 458752, 0, 917523, 458752, 2, 851987, 458752, 1, 786451, 458752, 1, 720915, 458752, 1, 655379, 458752, 0, 917522, 458752, 2, 851986, 655360, 1, 786450, 393216, 1, 720914, 393216, 1, 655378, 393216, 0, 786454, 458752, 0, 851990, 458752, 1, 917526, 458752, 1, 983067, 983040, 5, 1048603, 983040, 6, 917531, 983040, 5, 851995, 983040, 5, 786459, 983040, 5, 720923, 983040, 5, 655387, 983040, 5, 589851, 983040, 5, 524315, 983040, 4, 786455, 524288, 0, 851991, 524288, 1, 917527, 524288, 1, 983063, 524288, 1, 1048599, 524288, 2, 983062, 393216, 1, 1048598, 393216, 2)
layer_2/name = "World"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(655366, 786432, 4, 655367, 851968, 4, 655368, 917504, 4, 524299, 851968, 4, 524300, 917504, 4, 524298, 786432, 4)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(3, 16)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(502, 152)
shape = SubResource("RectangleShape2D_88da1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(437, 184)
shape = SubResource("RectangleShape2D_8l2wm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(322, 184.125)
shape = SubResource("RectangleShape2D_qv0ls")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(354, 215.938)
shape = SubResource("RectangleShape2D_3y8sa")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(298.5, 183.25)
shape = SubResource("RectangleShape2D_5yv6c")

[node name="Player" parent="." instance=ExtResource("9_fvp2p")]
position = Vector2(41, 176)

[node name="SpawnPosition" type="Marker2D" parent="."]
position = Vector2(41, 182)

[connection signal="player_entered" from="EndPoint" to="." method="_on_end_point_player_entered"]
